<resources>
    <string name="app_name">YatirimTakip</string>
    <string name="add_symbol">Sembol Ekle</string>
    <string name="add_buy_sell">Alım Satım Gir</string>
    <string name="see_total">Toplamı Gör</string>
    <string name="sync_with_drive">Drive\'a Gönder</string>
    <string name="see_history">Geçmiş Kar/Zarar</string>
    <string name="symbol_list_fragment_label">Sembol Listesi</string>
    <string name="buysell_list_fragment_label">Alım/Satım Listesi</string>
    <string name="history_list_fragment_label">Geçmiş Kar/Zarar Listesi</string>
    <string name="are_you_sure">Emin misiniz?</string>
    <string name="yes_text">Evet</string>
    <string name="no_text">Hayır</string>
    <string name="ok_text">Tamam</string>
    <string name="warning">Uyarı</string>
    <string name="select_symbol_message">Al/Sat kaydı girebilmek için listeden bir sembol seçiniz!</string>
    <string name="attention">Dikkat</string>
    <string name="symbol_already_exists">Sembol zaten var!</string>
    <string name="capital">Anapara</string>
    <string name="symbol_uppercase">SEMBOL</string>
    <string name="symbol">Sembol</string>
    <string name="symbol_description">SYMBOL_DESC</string>
    <string name="pieces">Lot</string>
    <string name="value">Değer</string>
    <string name="date_time_text">DATE_TIME</string>
    <string name="select_date_time">Tarih Seç</string>
    <string name="add">Ekle</string>
    <string name="cancel">İptal</string>
    <string name="send">Gönder</string>
    <string name="total_pieces">Toplam Adet:</string>
    <string name="total_cost">Toplam Maliyet:</string>
    <string name="default_pieces">0000</string>
    <string name="default_cost">0000.00</string>
    <string name="default_mean">00.00</string>
    <string name="profit_loss_title">KAR/ZARAR</string>
    <string name="mean_title_uppercase">ORTALAMANIZ</string>
    <string name="default_pieces_text_uppercase">PIECES</string>
    <string name="default_value_text_uppercase">VALUE</string>
    <string name="default_total_text_uppercase">TOTAL</string>
    <string name="not_available">\?\?</string>
    <string name="history_calculation_info">Almış olduğunuz fakat henüz satmadığınız semboller !!! olarak görünmektedir ve hesaplamaya dahil edilmemiştir.</string>
    <string name="history_title">Geçmiş Kâr/Zarar Listesi (Toplu)</string>
    <string name="total_text">TOPLAM:</string>
    <string name="not_calculated">!!!</string>
    <string name="live_total_cost_text">Anlık Toplam Kar/Zarar:</string>
</resources>