<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvDialogBuySellSymbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symbol_uppercase"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etPieces"
        android:hint="@string/pieces"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etValue"
        android:hint="@string/value"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvDialogBuySellDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_text"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/btnDateTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_time"
            android:background="@color/teal_200"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnDialogBuySellAdd"
            android:text="@string/add"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnDialogBuySellCancel"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>