<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@drawable/buysell_list_item_background">

    <TextView
        android:id="@+id/tvBuySellListPieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_pieces_text_uppercase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBuySellListValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value_text_uppercase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvBuySellListTotalCost"
        app:layout_constraintStart_toEndOf="@+id/tvBuySellListPieces" />

    <TextView
        android:id="@+id/tvBuySellListDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/date_time_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvBuySellListPieces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBuySellListTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_total_text_uppercase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>