<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_symbol_list"
    tools:context=".fragment.SymbolListFragment">

    <TextView
        android:id="@+id/tvSymbolListSymbolTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_uppercase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <TextView
        android:id="@+id/tvSymbolListProfitLossTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profit_loss_title"
        app:layout_constraintEnd_toStartOf="@+id/tvSymbolListMeanTitle"
        app:layout_constraintStart_toEndOf="@+id/tvSymbolListSymbolTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSymbolListMeanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean_title_uppercase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSymbolList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSymbolListTotalCostText"
        app:layout_constraintTop_toBottomOf="@+id/tvSymbolListSymbolTitle" />

    <TextView
        android:id="@+id/tvSymbolListTotalCostText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/live_total_cost_text"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.499"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/tvSymvolListTotalCostValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_cost"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintWidth_percent="0.499"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>