<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SymbolListFragment">

    <fragment
        android:id="@+id/SymbolListFragment"
        android:name="com.bebsoft.yatirimtakip.fragment.SymbolListFragment"
        android:label="@string/symbol_list_fragment_label"
        tools:layout="@layout/fragment_symbol_list">

        <action
            android:id="@+id/action_SymbolListFragment_to_BuySellListFragment"
            app:destination="@id/BuySellListFragment" />
        <action
            android:id="@+id/action_SymbolListFragment_to_historyFragment"
            app:destination="@id/HistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/BuySellListFragment"
        android:name="com.bebsoft.yatirimtakip.fragment.BuySellListFragment"
        android:label="@string/buysell_list_fragment_label"
        tools:layout="@layout/fragment_buysell_list">

        <action
            android:id="@+id/action_BuySellListFragment_to_SymbolListFragment"
            app:destination="@id/SymbolListFragment" />
        <argument
            android:name="currentSymbol"
            app:argType="string" />
        <action
            android:id="@+id/action_BuySellListFragment_to_historyFragment"
            app:destination="@id/HistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.bebsoft.yatirimtakip.fragment.HistoryFragment"
        android:label="@string/history_list_fragment_label"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_SymbolListFragment"
            app:destination="@id/SymbolListFragment" />
    </fragment>
</navigation>